--- a/styles/index.css
+++ b/styles/index.css
@@ -6,6 +6,10 @@
   margin: 0;
 }
 
+img {
+  width: 100%;
+}
+
 html {
   font-size: 62.5%;
 }
@@ -41,4 +45,29 @@ main {
 
 .movie {
   width: 100%;
+}
+
+.element-position-relative {
+  position: relative;
+}
+
+.ads {
+  position: absolute;
+  bottom: 3%;
+  border-radius: 1rem;
+  background-color: #fff;
+  opacity: 0.7;
+}
+
+.ads__link {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  padding: 0.75rem;
+  font-size: 1.2rem;
+  color: #000;
+}
+
+.ads__img {
+  width: 20%;
 }
